# myTodoList

./: .gitignore  LICENSE  README.md  pyproject.toml
api/: urls.py
api/attachments/: models.py  serializers.py  views.py
api/boards/: models.py  serializers.py  views.py
api/cards/: models.py  serializers.py
api/comments/: models.py
api/lists/: models.py  serializers.py  views.py
config/: asgi.py  urls.py  wsgi.py
config/settings/: base.py  local.py  prod.py
